# service-full-text-search

./: Dockerfile  app.env  docker-compose.yml  pyproject.toml  requirments.txt  script.sh
app/: MongoAPI.py  app.py  initapp.py
test/: service.txt  test.py
test/jsonDocuments/: 1.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json
